HVAC Backup 2/objects/Travel_Allowance__c(1).object
<CustomObject>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <label>Dealer Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Travel Allowance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dealer_Code__c</columns>
        <columns>Department__c</columns>
        <columns>Pincode__c</columns>
        <columns>Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TAN-{0000}</displayFormat>
        <label>Travel Allowance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Allowances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>